# my_c_linux

./: CMakeLists.txt  README.md  hello_world  hello_world.c
simple_makefile_tutorial/: Makefile.1  Makefile.2  Makefile.3  Makefile.4
simple_makefile_tutorial/src/: Makefile  hellofunc.c
stack using Array/: stack  stack.c  stack_lec6  stack_lec7  stack_lec7.c  stack_lec8  stack_lec8.c
